force-app/main/default/src/objects/PJN_Mapping_Field__mdt/PJN_Mapping_Field__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Mapping Engine
Purpose: Define source field and target field for a Field Mapping type. This is step 3 in setting up the mapping engine for object-related mapping.
Metadata Relationship(s): Mapping
Created by Mavens: Yes</description>
    <label>Mapping Field</label>
    <pluralLabel>Mapping Fields</pluralLabel>
</CustomObject>