force-app/main/default/src/objects/PJN_Mapping_Field__mdt/fields/PJN_Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Target_Field_API_Name__c</fullName>
    <description>Target Field API Name</description>
    <label>Target Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>