force-app/main/default/src/objects/PJN_Mapping_Field__mdt/listViews/MVN_FR_MaterialsOrder_Map.listView-meta.xml
<ListView>
    <fullName>MVN_FR_MaterialsOrder_Map</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Material</value>
    </filters>
    <label>Fulfillment Request Materials Order Map</label>
    <language>en_US</language>
</ListView>