force-app/main/default/src/objects/PJN_Mapping_Field__mdt/listViews/MVN_SP_Triage_FR_Mapping_Fields.listView-meta.xml
<ListView>
    <fullName>MVN_SP_Triage_FR_Mapping_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Mapping__c</columns>
    <columns>PJN_Source_Field_API_Name__c</columns>
    <columns>PJN_Target_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PJN_Mapping__c</field>
        <operation>startsWith</operation>
        <value>MVN_EVK_SP_Triage</value>
    </filters>
    <label>SP Triage FR Mapping Fields</label>
    <language>en_US</language>
</ListView>