force-app/main/default/src/objects/PJN_Mapping_Field__mdt/listViews/MVN_Therapy_Status_Mappinf_Fields.listView-meta.xml
<ListView>
    <fullName>MVN_Therapy_Status_Mappinf_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>therapy status</value>
    </filters>
    <label>Therapy Status Mapping Fields</label>
    <language>en_US</language>
</ListView>