force-app/main/default/src/objects/PJN_Mapping_Field__mdt/listViews/PJN_All_Mapping_Fields.listView-meta.xml
<ListView>
    <fullName>PJN_All_Mapping_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PJN_Mapping__c</columns>
    <columns>PJN_Source_Field_API_Name__c</columns>
    <columns>PJN_Target_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mapping Fields</label>
    <language>en_US</language>
</ListView>